--- a/Player.html
+++ b/Player.html
@@ -23,7 +23,7 @@
         if (parts.length === 2) return parts.pop().split(';').shift(); 
     }
     if (!getCookie('рџљЂ')) { 
-        window.location.href = 'success.html'; 
+        window.location.href = 'Generatekey.html'; 
     } 
     </script>
 
