--- a/Generatekey.html
+++ b/Generatekey.html
@@ -143,7 +143,7 @@
 
   <script>
     const urls = {
-      server02: 'https://linkcents.com/zsGIAq',
+      server02: 'http://linkcents.com/Iru0',
       server03: 'https://linkcents.com/zsGIAq',
       recommendServer: 'https://linkcents.com/S5rwewD',
       tutorialVideo: 'https://t.me/EduVerse_Network/589'
