--- a/Generatekey.html
+++ b/Generatekey.html
@@ -144,7 +144,7 @@
   <script>
     const urls = {
       server02: 'http://linkcents.com/Iru0',
-      server03: 'https://linkcents.com/zsGIAq',
+      server03: 'http://linkcents.com/Iru0',
       recommendServer: 'https://linkcents.com/S5rwewD',
       tutorialVideo: 'https://t.me/EduVerse_Network/589'
     };
