--- a/Generatekey.html
+++ b/Generatekey.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-  <meta charset="UTF-8">
+  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Power Study Access</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
@@ -204,7 +203,7 @@
   </script>
 
   <script>
-    const server02Url = 'https://shortner.in/zELss';
+    const server02Url = 'http://linkcents.com/FcjM';
     const server03Url = 'https://shortner.in/zELss';
     const recommendServerUrl = 'https://shortner.in/zELss';
     const tutorialVideoUrl = 'https://t.me/Files_Buddy_Bot?start=BQADAQADRAcAAm8cSEfQnySBc2bwAAEWBA';
