--- a/Generatekey.html
+++ b/Generatekey.html
@@ -204,8 +204,8 @@
 
   <script>
     const server02Url = 'http://linkcents.com/FcjM';
-    const server03Url = 'https://shortner.in/zELss';
-    const recommendServerUrl = 'https://shortner.in/zELss';
+    const server03Url = 'http://linkcents.com/FcjM';
+    const recommendServerUrl = 'http://linkcents.com/FcjM';
     const tutorialVideoUrl = 'https://t.me/Files_Buddy_Bot?start=BQADAQADRAcAAm8cSEfQnySBc2bwAAEWBA';
 
     function setTemporaryCookieAndRedirect(cookieName, url) {
